--- a/05-css-extract-text/package.json
+++ b/05-css-extract-text/package.json
@@ -15,17 +15,18 @@
   "author": "Yuji Miyane",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
-    "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "autoprefixer": "^9.4.4",
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.4",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "sass-loader": "^7.0.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
