--- a/07-customizing-bootstrap/package.json
+++ b/07-customizing-bootstrap/package.json
@@ -14,23 +14,24 @@
   ],
   "author": "Yuji Miyane",
   "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6"
+  },
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
-    "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "autoprefixer": "^9.4.4",
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.4",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "sass-loader": "^7.0.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
-  },
-  "dependencies": {
-    "bootstrap": "^4.1.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
